# CSVWorklog

./: .clang-format  .clangd  .gitignore  .gitmodules  Build.bat  CMakeLists.txt  Certificate.cer  Certificate.pfx  Export.bat  Install.bat  LICENSE.md  README.md  Uninstall.bat
Source/: Main.cpp
